deploy/overlays/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bocr-dep
  name: bocr-dep
  namespace: nebo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: bocr-dep
  template:
    metadata:
      labels:
        app: bocr-dep
    spec:
      containers:
        - command:
            - /app/scripts/start.sh
          image: <container image>
          imagePullPolicy: Always
          name: bocr-dep
          resources:
            limits:
              memory: 1024Mi
