deploy/overlays/prod/prod-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name:  api-ingress
  namespace: nebo
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: cattle-system-traefik-redirect-scheme@kubernetescrd 
spec:
  rules:
  - host: prod.api.<domain name>
    http:
      paths:
      - backend:
          serviceName: bocr-svc
          servicePort: 80
        pathType: ImplementationSpecific
